--- a/styles.css
+++ b/styles.css
@@ -72,11 +72,13 @@ label{
     display: none;
 }
 
-.boton{
+.boton,
+.limpiarDatos
+{
     background: #052051;
     font-size: 15px;
     color: #F3F5FC;
-    width: 100px;
+    width: 110px;
     height: 35px;
     margin: 5.5px;
     border-radius: 5px;
@@ -85,7 +87,8 @@ label{
     cursor: pointer;
 }
 
-.boton:hover{
+.boton:hover,
+{
     background: #356EA9;
     transform: scale(1.2);
 }
